[gd_scene load_steps=2 format=3 uid="uid://cikw4vj4xptxd"]

[ext_resource type="Script" uid="uid://cgdn18nfe1xtb" path="res://main_menu.gd" id="1_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 60.0
offset_right = 150.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "魔塔 Magic Tower"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="BtnStart" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "开始游戏"

[node name="BtnLoad" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "加载游戏"

[node name="BtnAbout" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "关于"

[node name="BtnExit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "退出游戏"
